[tool.poetry]
name = "lightr"
version = "0.0.1"
description = ""
authors = ["Mustafa Mohamed <git@ms7m.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
redis = "^4.3.4"
loguru = "^0.6.0"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
pytest-sugar = "^0.9.5"
pytest-asyncio = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
