[tool.poetry]
name = "ridant"
version = "0.0.2"
description = ""
authors = ["Mustafa Mohamed <git@ms7m.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
redis = "^4.3.4"
loguru = "^0.6.0"
pydantic = "1.9.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
pytest-sugar = "^0.9.5"
pytest-asyncio = "^0.20.1"


[tool.poetry.group.odmantic.dependencies]
odmantic = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
